# django_view_test

./: .flake8  README.md  manage.py  pyproject.toml  task_definition.py
django_view_test/: asgi.py  settings.py  urls.py  wsgi.py
foods/: admin.py  models.py  serializers.py  urls.py  views.py
foods/migrations/: 0001_initial.py  0002_alter_food_options.py
test_view/: apps.py
