[tool.poetry]
name = "django_view_test"
version = "0.1.0"
description = ""
authors = ["xscav <ur.pekax@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
django-model-utils = "^4.2.0"
Django = "^4.1.7"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
